<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/imagen_background"
    tools:context=".view.userposts.UserPostsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userPostsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="12dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:textColor="@color/green"
                android:textSize="@dimen/text_name"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Leanne Graham" />

            <ImageView
                android:id="@+id/iconPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:layout_marginVertical="@dimen/margin_vertical"
                android:src="@mipmap/ic_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:layout_marginVertical="@dimen/margin_vertical"
                android:textColor="@color/black"
                android:textSize="@dimen/text_number"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/iconPhone"
                app:layout_constraintStart_toEndOf="@+id/iconPhone"
                app:layout_constraintTop_toTopOf="@+id/iconPhone"
                tools:text="1-770-736-8031 x56442" />

            <ImageView
                android:id="@+id/iconEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:layout_marginVertical="@dimen/margin_vertical"
                android:src="@mipmap/ic_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iconPhone" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:layout_marginVertical="@dimen/margin_vertical"
                android:textColor="@color/black"
                android:textSize="@dimen/text_number"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/iconEmail"
                app:layout_constraintStart_toEndOf="@+id/iconEmail"
                app:layout_constraintTop_toTopOf="@+id/iconEmail"
                tools:text="Sincere@april.biz" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerUserPosts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/data" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fallbackContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/alertDb"
            android:layout_width="@dimen/size_width_image_fallback"
            android:layout_height="@dimen/size_heigth_image_fallback"
            android:background="@drawable/ic_launcher_foreground"
            android:src="@mipmap/ic_error"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_ocurrido_un_error"
            android:textSize="@dimen/message_fallback_error"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/btnRetry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alertDb" />

        <Button
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/reintentar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textError" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/loading" />

</androidx.constraintlayout.widget.ConstraintLayout>